welcome.lessons.welcome.loopwhile.LoopWhile.scala.error
Program:1: error: not found: value estfaceMur
while (estfaceMur(False))
       ^Program:1: error: not found: value False
while (estfaceMur(False))
                  ^